--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.5",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
@@ -18,13 +19,17 @@
     "@tanstack/react-query": "^5.68.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "json-2-csv": "^5.5.9",
     "lucide-react": "^0.482.0",
     "motion": "^12.5.0",
     "next": "15.2.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-use-measure": "^2.1.7",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
+    "tailwind-scrollbar": "^4.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
